# de-projects-beyond-zoomcamp

./: .gitignore  README.md  pyproject.toml
01-docker-terraform/docker/: README.md
01-docker-terraform/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
01-docker-terraform/terraform/modules/networks/: main.tf  outputs.tf
01-docker-terraform/terraform/modules/services/: main.tf  variables.tf
02-workflow-orchestration/: .env.example  .env.secrets.example  README.md  docker-compose.yml
02-workflow-orchestration/flows/: main_zoomcamp.00_environment_setup.yaml  main_zoomcamp.01_taxi_tripdata_pipeline.yaml
02-workflow-orchestration/scripts/: bootstrap_env.sh
03-data-warehouse/: README.md
03-data-warehouse/bqml-model/xgb_bytes_predictor/: explanation_metadata.json  model.bst
03-data-warehouse/bqml_model/xgb_bytes_predictor/: model.bst
03-data-warehouse/notebooks/: ml_model_selection.ipynb
03-data-warehouse/results/: benchmark_results.csv  best_model_param.json  table_manifest.csv
03-data-warehouse/scripts/: .env.example  build_table_variants.py  check.py  ingest_to_gcs.py  load_benchmark_to_bq.py  run_benchmark.py
03-data-warehouse/scripts/utils/: common.py  query_templates.py
03-data-warehouse/sql/: evaluate_bqml_model.sql  export_bqml_model.sql  feature_importance_bqml_model.sql  train_bqml_model.sql
03-data-warehouse/streamlit/: core.py  main.py  requirements.txt
03-data-warehouse/streamlit/.streamlit/: config.toml
03-data-warehouse/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+5 files in other folders)
