[project]
name = "learn-data-engineering-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-bigquery>=3.42.1",
    "google-cloud-storage>=3.12.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "pgcli>=4.5.0",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
    "tqdm>=4.68.2",
]
